CC /Compiladores/Trabalho Final/estudo/VerificaçãoDetipos/sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIMPROGRAMA

    3 cabecalho: T_PROGRAMA T_IDENTIFICADOR

    4 variaveis: ε
    5          | declaracao_variaveis

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    7                     | tipo lista_variaveis

    8 tipo: T_INTEIRO
    9     | T_LOGICO

   10 lista_variaveis: lista_variaveis T_IDENTIFICADOR
   11                | T_IDENTIFICADOR

   12 lista_comandos: ε
   13               | comando lista_comandos

   14 comando: leitura
   15        | escrita
   16        | repeticao
   17        | selecao
   18        | atribuicao

   19 leitura: T_LEIA T_IDENTIFICADOR

   20 escrita: T_ESCREVA expr

   21 $@2: ε

   22 $@3: ε

   23 repeticao: T_ENQUANTO $@2 expr T_FACA $@3 lista_comandos T_FIMENQUANTO

   24 $@4: ε

   25 $@5: ε

   26 selecao: T_SE expr T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

   27 $@6: ε

   28 atribuicao: T_IDENTIFICADOR $@6 T_ATRIBUICAO expr

   29 expr: expr T_SOMA expr
   30     | expr T_SUBTRACAO expr
   31     | expr T_DIVISAO expr
   32     | expr T_MULTIPLICACAO expr
   33     | expr T_MAIOR expr
   34     | expr T_MENOR expr
   35     | expr T_IGUAL expr
   36     | expr T_E expr
   37     | expr T_OU expr
   38     | termo

   39 termo: T_IDENTIFICADOR
   40      | T_NUMERO
   41      | T_V
   42      | T_F
   43      | T_NAO termo
   44      | T_ABRE expr T_FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 3
    T_INICIO (259) 2
    T_FIMPROGRAMA (260) 2
    T_LEIA (261) 19
    T_ESCREVA (262) 20
    T_SE (263) 26
    T_ENTAO (264) 26
    T_SENAO (265) 26
    T_FIMSE (266) 26
    T_ENQUANTO (267) 23
    T_FACA (268) 23
    T_FIMENQUANTO (269) 23
    T_SOMA (270) 29
    T_SUBTRACAO (271) 30
    T_MULTIPLICACAO (272) 32
    T_DIVISAO (273) 31
    T_MAIOR (274) 33
    T_MENOR (275) 34
    T_IGUAL (276) 35
    T_E (277) 36
    T_OU (278) 37
    T_NAO (279) 43
    T_ATRIBUICAO (280) 28
    T_ABRE (281) 44
    T_FECHA (282) 44
    T_INTEIRO (283) 8
    T_LOGICO (284) 9
    T_V (285) 41
    T_F (286) 42
    T_IDENTIFICADOR (287) 3 10 11 19 28 39
    T_NUMERO (288) 40


Nonterminals, with rules where they appear

    $accept (34)
        on left: 0
    programa (35)
        on left: 2
        on right: 0
    $@1 (36)
        on left: 1
        on right: 2
    cabecalho (37)
        on left: 3
        on right: 2
    variaveis (38)
        on left: 4 5
        on right: 2
    declaracao_variaveis (39)
        on left: 6 7
        on right: 5 6
    tipo (40)
        on left: 8 9
        on right: 6 7
    lista_variaveis (41)
        on left: 10 11
        on right: 6 7 10
    lista_comandos (42)
        on left: 12 13
        on right: 2 13 23 26
    comando (43)
        on left: 14 15 16 17 18
        on right: 13
    leitura (44)
        on left: 19
        on right: 14
    escrita (45)
        on left: 20
        on right: 15
    repeticao (46)
        on left: 23
        on right: 16
    $@2 (47)
        on left: 21
        on right: 23
    $@3 (48)
        on left: 22
        on right: 23
    selecao (49)
        on left: 26
        on right: 17
    $@4 (50)
        on left: 24
        on right: 26
    $@5 (51)
        on left: 25
        on right: 26
    atribuicao (52)
        on left: 28
        on right: 18
    $@6 (53)
        on left: 27
        on right: 28
    expr (54)
        on left: 29 30 31 32 33 34 35 36 37 38
        on right: 20 23 26 28 29 30 31 32 33 34 35 36 37 44
    termo (55)
        on left: 39 40 41 42 43 44
        on right: 38 43


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    3 cabecalho: T_PROGRAMA • T_IDENTIFICADOR

    T_IDENTIFICADOR  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    2 programa: cabecalho • variaveis $@1 T_INICIO lista_comandos T_FIMPROGRAMA

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 4 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    3 cabecalho: T_PROGRAMA T_IDENTIFICADOR •

    $default  reduce using rule 3 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    8 tipo: T_INTEIRO •

    $default  reduce using rule 8 (tipo)


State 7

    9 tipo: T_LOGICO •

    $default  reduce using rule 9 (tipo)


State 8

    2 programa: cabecalho variaveis • $@1 T_INICIO lista_comandos T_FIMPROGRAMA

    $default  reduce using rule 1 ($@1)

    $@1  go to state 11


State 9

    5 variaveis: declaracao_variaveis •

    $default  reduce using rule 5 (variaveis)


State 10

    6 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    7                     | tipo • lista_variaveis

    T_IDENTIFICADOR  shift, and go to state 12

    lista_variaveis  go to state 13


State 11

    2 programa: cabecalho variaveis $@1 • T_INICIO lista_comandos T_FIMPROGRAMA

    T_INICIO  shift, and go to state 14


State 12

   11 lista_variaveis: T_IDENTIFICADOR •

    $default  reduce using rule 11 (lista_variaveis)


State 13

    6 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    7                     | tipo lista_variaveis •
   10 lista_variaveis: lista_variaveis • T_IDENTIFICADOR

    T_INTEIRO        shift, and go to state 6
    T_LOGICO         shift, and go to state 7
    T_IDENTIFICADOR  shift, and go to state 15

    $default  reduce using rule 7 (declaracao_variaveis)

    declaracao_variaveis  go to state 16
    tipo                  go to state 10


State 14

    2 programa: cabecalho variaveis $@1 T_INICIO • lista_comandos T_FIMPROGRAMA

    T_LEIA           shift, and go to state 17
    T_ESCREVA        shift, and go to state 18
    T_SE             shift, and go to state 19
    T_ENQUANTO       shift, and go to state 20
    T_IDENTIFICADOR  shift, and go to state 21

    $default  reduce using rule 12 (lista_comandos)

    lista_comandos  go to state 22
    comando         go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 15

   10 lista_variaveis: lista_variaveis T_IDENTIFICADOR •

    $default  reduce using rule 10 (lista_variaveis)


State 16

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 6 (declaracao_variaveis)


State 17

   19 leitura: T_LEIA • T_IDENTIFICADOR

    T_IDENTIFICADOR  shift, and go to state 29


State 18

   20 escrita: T_ESCREVA • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 36
    termo  go to state 37


State 19

   26 selecao: T_SE • expr T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 38
    termo  go to state 37


State 20

   23 repeticao: T_ENQUANTO • $@2 expr T_FACA $@3 lista_comandos T_FIMENQUANTO

    $default  reduce using rule 21 ($@2)

    $@2  go to state 39


State 21

   28 atribuicao: T_IDENTIFICADOR • $@6 T_ATRIBUICAO expr

    $default  reduce using rule 27 ($@6)

    $@6  go to state 40


State 22

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos • T_FIMPROGRAMA

    T_FIMPROGRAMA  shift, and go to state 41


State 23

   13 lista_comandos: comando • lista_comandos

    T_LEIA           shift, and go to state 17
    T_ESCREVA        shift, and go to state 18
    T_SE             shift, and go to state 19
    T_ENQUANTO       shift, and go to state 20
    T_IDENTIFICADOR  shift, and go to state 21

    $default  reduce using rule 12 (lista_comandos)

    lista_comandos  go to state 42
    comando         go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 24

   14 comando: leitura •

    $default  reduce using rule 14 (comando)


State 25

   15 comando: escrita •

    $default  reduce using rule 15 (comando)


State 26

   16 comando: repeticao •

    $default  reduce using rule 16 (comando)


State 27

   17 comando: selecao •

    $default  reduce using rule 17 (comando)


State 28

   18 comando: atribuicao •

    $default  reduce using rule 18 (comando)


State 29

   19 leitura: T_LEIA T_IDENTIFICADOR •

    $default  reduce using rule 19 (leitura)


State 30

   43 termo: T_NAO • termo

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    termo  go to state 43


State 31

   44 termo: T_ABRE • expr T_FECHA

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 44
    termo  go to state 37


State 32

   41 termo: T_V •

    $default  reduce using rule 41 (termo)


State 33

   42 termo: T_F •

    $default  reduce using rule 42 (termo)


State 34

   39 termo: T_IDENTIFICADOR •

    $default  reduce using rule 39 (termo)


State 35

   40 termo: T_NUMERO •

    $default  reduce using rule 40 (termo)


State 36

   20 escrita: T_ESCREVA expr •
   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr

    T_SOMA           shift, and go to state 45
    T_SUBTRACAO      shift, and go to state 46
    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48
    T_MAIOR          shift, and go to state 49
    T_MENOR          shift, and go to state 50
    T_IGUAL          shift, and go to state 51
    T_E              shift, and go to state 52
    T_OU             shift, and go to state 53

    $default  reduce using rule 20 (escrita)


State 37

   38 expr: termo •

    $default  reduce using rule 38 (expr)


State 38

   26 selecao: T_SE expr • T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE
   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr

    T_ENTAO          shift, and go to state 54
    T_SOMA           shift, and go to state 45
    T_SUBTRACAO      shift, and go to state 46
    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48
    T_MAIOR          shift, and go to state 49
    T_MENOR          shift, and go to state 50
    T_IGUAL          shift, and go to state 51
    T_E              shift, and go to state 52
    T_OU             shift, and go to state 53


State 39

   23 repeticao: T_ENQUANTO $@2 • expr T_FACA $@3 lista_comandos T_FIMENQUANTO

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 55
    termo  go to state 37


State 40

   28 atribuicao: T_IDENTIFICADOR $@6 • T_ATRIBUICAO expr

    T_ATRIBUICAO  shift, and go to state 56


State 41

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIMPROGRAMA •

    $default  reduce using rule 2 (programa)


State 42

   13 lista_comandos: comando lista_comandos •

    $default  reduce using rule 13 (lista_comandos)


State 43

   43 termo: T_NAO termo •

    $default  reduce using rule 43 (termo)


State 44

   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr
   44 termo: T_ABRE expr • T_FECHA

    T_SOMA           shift, and go to state 45
    T_SUBTRACAO      shift, and go to state 46
    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48
    T_MAIOR          shift, and go to state 49
    T_MENOR          shift, and go to state 50
    T_IGUAL          shift, and go to state 51
    T_E              shift, and go to state 52
    T_OU             shift, and go to state 53
    T_FECHA          shift, and go to state 57


State 45

   29 expr: expr T_SOMA • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 58
    termo  go to state 37


State 46

   30 expr: expr T_SUBTRACAO • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 59
    termo  go to state 37


State 47

   32 expr: expr T_MULTIPLICACAO • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 60
    termo  go to state 37


State 48

   31 expr: expr T_DIVISAO • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 61
    termo  go to state 37


State 49

   33 expr: expr T_MAIOR • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 62
    termo  go to state 37


State 50

   34 expr: expr T_MENOR • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 63
    termo  go to state 37


State 51

   35 expr: expr T_IGUAL • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 64
    termo  go to state 37


State 52

   36 expr: expr T_E • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 65
    termo  go to state 37


State 53

   37 expr: expr T_OU • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 66
    termo  go to state 37


State 54

   26 selecao: T_SE expr T_ENTAO • $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

    $default  reduce using rule 24 ($@4)

    $@4  go to state 67


State 55

   23 repeticao: T_ENQUANTO $@2 expr • T_FACA $@3 lista_comandos T_FIMENQUANTO
   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr

    T_FACA           shift, and go to state 68
    T_SOMA           shift, and go to state 45
    T_SUBTRACAO      shift, and go to state 46
    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48
    T_MAIOR          shift, and go to state 49
    T_MENOR          shift, and go to state 50
    T_IGUAL          shift, and go to state 51
    T_E              shift, and go to state 52
    T_OU             shift, and go to state 53


State 56

   28 atribuicao: T_IDENTIFICADOR $@6 T_ATRIBUICAO • expr

    T_NAO            shift, and go to state 30
    T_ABRE           shift, and go to state 31
    T_V              shift, and go to state 32
    T_F              shift, and go to state 33
    T_IDENTIFICADOR  shift, and go to state 34
    T_NUMERO         shift, and go to state 35

    expr   go to state 69
    termo  go to state 37


State 57

   44 termo: T_ABRE expr T_FECHA •

    $default  reduce using rule 44 (termo)


State 58

   29 expr: expr • T_SOMA expr
   29     | expr T_SOMA expr •
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr

    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48

    $default  reduce using rule 29 (expr)


State 59

   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   30     | expr T_SUBTRACAO expr •
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr

    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48

    $default  reduce using rule 30 (expr)


State 60

   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   32     | expr T_MULTIPLICACAO expr •
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr

    $default  reduce using rule 32 (expr)


State 61

   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   31     | expr T_DIVISAO expr •
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr

    $default  reduce using rule 31 (expr)


State 62

   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   33     | expr T_MAIOR expr •
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr

    T_SOMA           shift, and go to state 45
    T_SUBTRACAO      shift, and go to state 46
    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48

    $default  reduce using rule 33 (expr)


State 63

   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   34     | expr T_MENOR expr •
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr

    T_SOMA           shift, and go to state 45
    T_SUBTRACAO      shift, and go to state 46
    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48

    $default  reduce using rule 34 (expr)


State 64

   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   35     | expr T_IGUAL expr •
   36     | expr • T_E expr
   37     | expr • T_OU expr

    T_SOMA           shift, and go to state 45
    T_SUBTRACAO      shift, and go to state 46
    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48
    T_MAIOR          shift, and go to state 49
    T_MENOR          shift, and go to state 50

    $default  reduce using rule 35 (expr)


State 65

   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   36     | expr T_E expr •
   37     | expr • T_OU expr

    T_SOMA           shift, and go to state 45
    T_SUBTRACAO      shift, and go to state 46
    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48
    T_MAIOR          shift, and go to state 49
    T_MENOR          shift, and go to state 50
    T_IGUAL          shift, and go to state 51

    $default  reduce using rule 36 (expr)


State 66

   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr
   37     | expr T_OU expr •

    T_SOMA           shift, and go to state 45
    T_SUBTRACAO      shift, and go to state 46
    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48
    T_MAIOR          shift, and go to state 49
    T_MENOR          shift, and go to state 50
    T_IGUAL          shift, and go to state 51

    $default  reduce using rule 37 (expr)


State 67

   26 selecao: T_SE expr T_ENTAO $@4 • lista_comandos T_SENAO $@5 lista_comandos T_FIMSE

    T_LEIA           shift, and go to state 17
    T_ESCREVA        shift, and go to state 18
    T_SE             shift, and go to state 19
    T_ENQUANTO       shift, and go to state 20
    T_IDENTIFICADOR  shift, and go to state 21

    $default  reduce using rule 12 (lista_comandos)

    lista_comandos  go to state 70
    comando         go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 68

   23 repeticao: T_ENQUANTO $@2 expr T_FACA • $@3 lista_comandos T_FIMENQUANTO

    $default  reduce using rule 22 ($@3)

    $@3  go to state 71


State 69

   28 atribuicao: T_IDENTIFICADOR $@6 T_ATRIBUICAO expr •
   29 expr: expr • T_SOMA expr
   30     | expr • T_SUBTRACAO expr
   31     | expr • T_DIVISAO expr
   32     | expr • T_MULTIPLICACAO expr
   33     | expr • T_MAIOR expr
   34     | expr • T_MENOR expr
   35     | expr • T_IGUAL expr
   36     | expr • T_E expr
   37     | expr • T_OU expr

    T_SOMA           shift, and go to state 45
    T_SUBTRACAO      shift, and go to state 46
    T_MULTIPLICACAO  shift, and go to state 47
    T_DIVISAO        shift, and go to state 48
    T_MAIOR          shift, and go to state 49
    T_MENOR          shift, and go to state 50
    T_IGUAL          shift, and go to state 51
    T_E              shift, and go to state 52
    T_OU             shift, and go to state 53

    $default  reduce using rule 28 (atribuicao)


State 70

   26 selecao: T_SE expr T_ENTAO $@4 lista_comandos • T_SENAO $@5 lista_comandos T_FIMSE

    T_SENAO  shift, and go to state 72


State 71

   23 repeticao: T_ENQUANTO $@2 expr T_FACA $@3 • lista_comandos T_FIMENQUANTO

    T_LEIA           shift, and go to state 17
    T_ESCREVA        shift, and go to state 18
    T_SE             shift, and go to state 19
    T_ENQUANTO       shift, and go to state 20
    T_IDENTIFICADOR  shift, and go to state 21

    $default  reduce using rule 12 (lista_comandos)

    lista_comandos  go to state 73
    comando         go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 72

   26 selecao: T_SE expr T_ENTAO $@4 lista_comandos T_SENAO • $@5 lista_comandos T_FIMSE

    $default  reduce using rule 25 ($@5)

    $@5  go to state 74


State 73

   23 repeticao: T_ENQUANTO $@2 expr T_FACA $@3 lista_comandos • T_FIMENQUANTO

    T_FIMENQUANTO  shift, and go to state 75


State 74

   26 selecao: T_SE expr T_ENTAO $@4 lista_comandos T_SENAO $@5 • lista_comandos T_FIMSE

    T_LEIA           shift, and go to state 17
    T_ESCREVA        shift, and go to state 18
    T_SE             shift, and go to state 19
    T_ENQUANTO       shift, and go to state 20
    T_IDENTIFICADOR  shift, and go to state 21

    $default  reduce using rule 12 (lista_comandos)

    lista_comandos  go to state 76
    comando         go to state 23
    leitura         go to state 24
    escrita         go to state 25
    repeticao       go to state 26
    selecao         go to state 27
    atribuicao      go to state 28


State 75

   23 repeticao: T_ENQUANTO $@2 expr T_FACA $@3 lista_comandos T_FIMENQUANTO •

    $default  reduce using rule 23 (repeticao)


State 76

   26 selecao: T_SE expr T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos • T_FIMSE

    T_FIMSE  shift, and go to state 77


State 77

   26 selecao: T_SE expr T_ENTAO $@4 lista_comandos T_SENAO $@5 lista_comandos T_FIMSE •

    $default  reduce using rule 26 (selecao)
